[build-system]
requires = ["setuptools >= 64.0", 
            "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "PyCBA"
dynamic = ["version"]
description = "Python Continuous Beam Analysis"
license = {text = "Apache 2.0"}
keywords = ["beam","bridge","vehicle"]
authors = [{name = "Colin Caprani", email = "colin.caprani@monash.edu"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://ccaprani.github.io/pycba/"
Documentation = "https://ccaprani.github.io/pycba/"
Source = "https://github.com/ccaprani/pycba/"
Tracker = "https://github.com/ccaprani/pycba/issues/"

[project.optional-dependencies]
test = ["pytest >= 6.2.2"]

[tool.setuptools]
platforms = ["any"]
include-package-data = true
license-files = ["LICENSE"]

# [tool.setuptools.packages]
# find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "pycba.__version__"}

[tool.distutils.bdist_wheel]
universal = 1

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

