[metadata]
name = PyCBA
version = attr: pycba.__version__
description = Python Continuous Beam Analysis
url = https://ccaprani.github.io/pycba/
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE
keyword = beam, bridge, vehicle
author = Colin Caprani
author_email = colin.caprani@monash.edu
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Environment :: Console
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache 2.0
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls = 
    Documentation = https://ccaprani.github.io/pycba/
    Source =  https://github.com/ccaprani/pycba
    Tracker = https://github.com/ccaprani/pycba/issues

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.8
setup_requires =
    setuptools
install_requires = 
    matplotlib
    numpy
    scipy

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.2

